<resources>
    <string name="app_name">Project_UTS</string>
    <string name="form">DATA MAHASISWA</string>
    <string name="result">BIODATA MAHASISWA</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="tempat">Tempat Lahir</string>
    <string name="tgl">Tanggal Lahir</string>
    <string name="project">Project UTS Android Programming\nSTMIK IKMI CIREBON</string>

</resources>
